# 20th_intern_songyeonu

./: README.md
C++&Qt/C++&Qt_project/: C++&Qr_project.pptx
C++&Qt/C++&Qt_project/C++&Qt_project_package/: CMakeLists.txt
C++&Qt/C++&Qt_project/C++&Qt_project_package/ui/: mainwindow.ui
C++&Qt/day3/hw2/: READ.me
OpenCV/day1/hw1/cv_hw1_package/: CMakeLists.txt  package.xml
OpenCV/day1/hw1/cv_hw1_package/include/cv_hw1/: cv_hw1.hpp
OpenCV/day1/hw1/cv_hw1_package/src/: cv_hw1.cpp
OpenCV/day1/hw2/hw2_package/: CMakeLists.txt
OpenCV/day1/hw2/hw2_package/include/: mainwindow.h
OpenCV/day1/hw2/hw2_package/src/: mainwindow.cpp
OpenCV/day1/hw2/hw2_package/ui/: mainwindow.ui
OpenCV/day2/hw1/hw1_package/: CMakeLists.txt
OpenCV/day2/hw1/hw1_package/include/: mainwindow.h
OpenCV/day2/hw1/hw1_package/src/: mainwindow.cpp
OpenCV/day2/hw1/hw1_package/ui/: mainwindow.ui
ROS2/day1/hw2/hw2_package/my_first_ros_rclcpp_pkg/src/: pub_node.cpp  sub_node.cpp
ROS2/day1/hw3/hw3_package/include/hw3/: publisher.hpp
ROS2/day2/hw1/hw1_package/: CMakeLists.txt
ROS2/day3/hw2/: READ.me
ROS2/day3/hw2/day3_hw2_package/: CMakeLists.txt  package.xml
ROS2/day3/hw2/day3_hw2_package/launch/: robotarm_launch.py
ROS2/day3/hw2/day3_hw2_package/src/: main.cpp  main_window.cpp  qnode.cpp
ROS2/day4/hw2/hw2_pkg1_package/: CMakeLists.txt
ROS2/day4/hw2/hw2_pkg1_package/launch/: joy_and_trans_launch.py
ROS2/day4/hw2/hw2_pkg1_package/src/: sub_node.cpp
ROS2/day4/hw2/hw2_pkg2_package/: CMakeLists.txt
ROS2/day4/hw2/hw2_pkg2_package/src/: pub_node.cpp
(+6 files in other folders)
